[gd_scene load_steps=53 format=3 uid="uid://d3wlbrqyi4wjc"]

[ext_resource type="Texture2D" uid="uid://dewysfrd46hyd" path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Attack.png" id="1_1ddp5"]
[ext_resource type="Script" path="res://Scenes/Mobs/Mashroom.gd" id="1_os1ph"]
[ext_resource type="Texture2D" uid="uid://b4dw2pvmxp1ux" path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Death.png" id="2_o5qjq"]
[ext_resource type="Texture2D" uid="uid://bbilnri254p73" path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Idle.png" id="3_2n5gf"]
[ext_resource type="Texture2D" uid="uid://bsg2bna7tmbp2" path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Run.png" id="4_edqur"]
[ext_resource type="Texture2D" uid="uid://cw2igcnmlfvwj" path="res://Assets/Monster_Creatures_Fantasy(Version 1.3)/Mushroom/Take Hit.png" id="5_socei"]
[ext_resource type="Texture2D" uid="uid://6rvf2k57x4lb" path="res://Assets/Effects/circle.png" id="7_yqad6"]
[ext_resource type="PackedScene" uid="uid://dvakcyn24oqag" path="res://Scenes/DamageBox/damage_box.tscn" id="8_x1viu"]
[ext_resource type="PackedScene" uid="uid://bemvu4pkibokr" path="res://Scenes/Mobs/mob_health.tscn" id="9_kctev"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pqwjo"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_drtjb"]
atlas = ExtResource("1_1ddp5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2nks"]
atlas = ExtResource("1_1ddp5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yvyo"]
atlas = ExtResource("1_1ddp5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_egvwc"]
atlas = ExtResource("1_1ddp5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7lsm"]
atlas = ExtResource("1_1ddp5")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c5lc"]
atlas = ExtResource("1_1ddp5")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj3dh"]
atlas = ExtResource("1_1ddp5")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f17su"]
atlas = ExtResource("1_1ddp5")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dli55"]
atlas = ExtResource("5_socei")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_67csu"]
atlas = ExtResource("5_socei")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0lcm"]
atlas = ExtResource("5_socei")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ogd8"]
atlas = ExtResource("5_socei")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_37jb5"]
atlas = ExtResource("2_o5qjq")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ly48"]
atlas = ExtResource("2_o5qjq")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4egw"]
atlas = ExtResource("2_o5qjq")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdvmr"]
atlas = ExtResource("2_o5qjq")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3yb3"]
atlas = ExtResource("3_2n5gf")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxkf8"]
atlas = ExtResource("3_2n5gf")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0eu3"]
atlas = ExtResource("3_2n5gf")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_528c1"]
atlas = ExtResource("3_2n5gf")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohvaa"]
atlas = ExtResource("3_2n5gf")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_libso"]
atlas = ExtResource("3_2n5gf")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhbab"]
atlas = ExtResource("3_2n5gf")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_btgqx"]
atlas = ExtResource("3_2n5gf")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbsmx"]
atlas = ExtResource("4_edqur")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5661"]
atlas = ExtResource("4_edqur")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qny8k"]
atlas = ExtResource("4_edqur")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6qs5"]
atlas = ExtResource("4_edqur")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_prcm6"]
atlas = ExtResource("4_edqur")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1qjy"]
atlas = ExtResource("4_edqur")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cpq8"]
atlas = ExtResource("4_edqur")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7prm4"]
atlas = ExtResource("4_edqur")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_gpbvn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drtjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2nks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yvyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egvwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7lsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c5lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj3dh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f17su")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dli55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67csu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0lcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ogd8")
}],
"loop": false,
"name": &"Damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37jb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ly48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4egw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdvmr")
}],
"loop": false,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3yb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxkf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0eu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_528c1")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohvaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_libso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhbab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btgqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohvaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_libso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhbab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btgqx")
}],
"loop": false,
"name": &"Recover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbsmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5661")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qny8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6qs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prcm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1qjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cpq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7prm4")
}],
"loop": true,
"name": &"Run",
"speed": 11.0
}]

[sub_resource type="Animation" id="Animation_10we0"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_pe5mr"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_30alf"]
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pfkpp"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5u7sc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackDirection/DamageBox/HitBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gauft"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Recover"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AttackDirection/AttackRange/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lwogd"]
length = 0.727273
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0909091, 0.181818, 0.272727, 0.363636, 0.454545, 0.545455, 0.636364),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Run"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xr7rf"]
_data = {
"Attack": SubResource("Animation_10we0"),
"Damage": SubResource("Animation_pe5mr"),
"Death": SubResource("Animation_30alf"),
"Idle": SubResource("Animation_pfkpp"),
"RESET": SubResource("Animation_5u7sc"),
"Recover": SubResource("Animation_gauft"),
"Run": SubResource("Animation_lwogd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehxe0"]
size = Vector2(19.5, 22)

[node name="Mashroom" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_os1ph")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_pqwjo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_gpbvn")
animation = &"Death"
autoplay = "Idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xr7rf")
}
autoplay = "Idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, -8)
scale = Vector2(0.1275, 0.1275)
texture = ExtResource("7_yqad6")

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(16.25, -2)
shape = SubResource("RectangleShape2D_ehxe0")

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("8_x1viu")]

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 64

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(18, -2)

[node name="MobHealth" parent="." instance=ExtResource("9_kctev")]
position = Vector2(-2.38419e-07, -31)
scale = Vector2(0.18, 0.18)
max_health = 10

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HurtBox" to="MobHealth" method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="damage_received" from="MobHealth" to="." method="_on_mob_health_damage_received"]
[connection signal="no_health" from="MobHealth" to="." method="_on_mob_health_no_health"]

[editable path="AttackDirection/DamageBox"]
